--- a/ARIMA Traffic Model/arima_model.ipynb
+++ b/ARIMA Traffic Model/arima_model.ipynb
@@ -163,11 +163,12 @@
    "source": [
     "def optimize_SARIMA(parameters_list, s, data):\n",
     "    \"\"\"\n",
-    "        Return dataframe with parameters, corresponding AIC and SSE\n",
-    "        \n",
+    "    Input:\n",
     "        parameters_list - list with (P, D, Q) tuples\n",
     "        s - length of season\n",
     "        data - the exogenous variable\n",
+    "    Output:\n",
+    "        Return a dataframe with parameters and their corresponding AIC and SSE.        \n",
     "    \"\"\"\n",
     "    \n",
     "    results = []\n",
